1. Added buy powerluvs feature to allow user to purchase additional 5 powerluvs package.(Added button in header portion of settings screens) 2. Fixed image overlapping issue on level2 page.

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -49,7 +49,7 @@
 .user-list-l-l,
 .nbmatches .user-list-l-l {min-height:420px;}
 .user-list-l,
-.nbmatches .user-list-l {height: 420px;max-width: 420px;min-height: 420px;}
+.nbmatches .user-list-l {height:auto;max-width: 420px;min-height: 420px;}
 .user-list-pic-wrapper,
 .nbmatches .user-list-pic-wrapper{width:420px;}
 .user-list-pic{width:420px;height:420px;}
@@ -66,7 +66,7 @@
 .user-list-l-l,
 .nbmatches .user-list-l-l {min-height: 380px;}
 .user-list-l,
-.nbmatches .user-list-l {height: 380px;max-width: 380px;min-height: 380px;}
+.nbmatches .user-list-l {height:auto;max-width: 380px;min-height: 380px;}
 .user-list-pic-wrapper,
 .nbmatches .user-list-pic-wrapper{width:380px;}
 .user-list-pic{width:380px;height:380px;}
@@ -145,6 +145,8 @@ ul.my-picture-ul > li {padding:10px;}
 .account-l-link ul li a::after {left:2px;}
 .left-my-picture ul li {padding:0 5px 20px;}
 ul.my-picture-ul > li {padding:7px;}
+#frm_powerluvs .color-btn {min-width: inherit;white-space: nowrap;width:45px;overflow:hidden;}
+
 }
 
 @media(max-width:767px){
